--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.0.3",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
@@ -19,18 +19,31 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@auth0/angular-jwt": "^2.1.2",
+    "@types/jquery": "^3.3.30",
+    "angular1-star-rating": "^1.2.11",
+    "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
+    "ngx-loading": "^3.0.1",
+    "ngx-pagination": "^4.0.0",
+    "ngx-rating": "0.0.9",
+    "ngx-socket-io": "^2.1.1",
+    "ngx-spinner": "^8.0.3",
+    "ngx-stars": "^1.4.3",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.3",
+    "@angular-devkit/build-angular": "^0.800.4",
+    "@angular/cli": "^8.0.4",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
